--- a/qr-conf-jee-backend/WebRoot/css/styles.css
+++ b/qr-conf-jee-backend/WebRoot/css/styles.css
@@ -20,6 +20,7 @@ audio:not ([controls] ){
 }
 
 html {
+	font-family: sans-serif
 	font-size: 100%;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%
@@ -42,22 +43,29 @@ a:active,a:hover {
 }
 
 h1 {
-	font-size: 2em;
+	color: #231F20;
+	font-size: 1.5em;
+	font-weight: normal;
 	margin: .67em 0
 }
 
 h2 {
-	font-size: 1.5em;
+	color: #58585B;
+	font-size: 1.2em;
+	font-weight: normal;
 	margin: .83em 0
 }
 
 h3 {
-	font-size: 1.17em;
+	font-size: 1.1em;
+	font-weight: normal;
 	margin: 1em 0
 }
 
 h4 {
+	color: #58585B;
 	font-size: 1em;
+	font-weight: normal;
 	margin: 1.33em 0
 }
 
@@ -210,18 +218,7 @@ label {
 
 .submit input {
 	width: auto;
-	padding: 9px 15px;
-	background: #1B75BB;
-	border: 0;
-	font-size: 14px;
-	color: #FFFFFF;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-}
-
-a.button {
-	width: auto;
-	padding: 9px 15px;
+	padding: 11px 26px;
 	background: #1B75BB;
 	border: 0;
 	font-size: 14px;
@@ -229,4 +226,44 @@ a.button {
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	text-decoration: none;
+	font-family: sans-serif
+}
+
+a.button {
+	width: auto;
+	padding: 10px 26px;
+	background: #1B75BB;
+	border: 0;
+	font-size: 14px;
+	color: #FFFFFF;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	text-decoration: none;
+	font-family: sans-serif
+}
+
+a.buttonred {
+	width: auto;
+	padding: 10px 26px;
+	background: #EB5359;
+	border: 0;
+	font-size: 14px;
+	color: #FFFFFF;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	text-decoration: none;
+	font-family: sans-serif
+}
+
+a.buttongreen {
+	width: auto;
+	padding: 10px 26px;
+	background: #2AB573;
+	border: 0;
+	font-size: 14px;
+	color: #FFFFFF;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	text-decoration: none;
+	font-family: sans-serif
 }
