--- a/qr-conf-jee-backend/WebRoot/css/genuitec-styles.css
+++ b/qr-conf-jee-backend/WebRoot/css/genuitec-styles.css
@@ -20,14 +20,14 @@ audio:not ([controls] ){
 }
 
 html {
-	font-family: sans-serif
-	font-size: 100%;
+	font-family: Lucida Grande,Lucida Sans,Arial,sans-serif;
+	font-size: 12px;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%
 }
 
 html,button,input,select,textarea {
-	font-family: sans-serif
+	font-family: Lucida Grande,Lucida Sans,Arial,sans-serif;
 }
 
 body {
@@ -44,38 +44,38 @@ a:active,a:hover {
 
 h1 {
 	color: #231F20;
-	font-size: 1.5em;
+	font-size: 2em;
 	font-weight: normal;
 	margin: .67em 0
 }
 
 h2 {
 	color: #58585B;
-	font-size: 1.2em;
+	font-size: 1.6em;
 	font-weight: normal;
 	margin: .83em 0
 }
 
 h3 {
-	font-size: 1.1em;
+	font-size: 1.3em;
 	font-weight: normal;
 	margin: 1em 0
 }
 
 h4 {
 	color: #58585B;
-	font-size: 1em;
+	font-size: 1.3em;
 	font-weight: normal;
 	margin: 1.33em 0
 }
 
 h5 {
-	font-size: .83em;
+	font-size: 1em;
 	margin: 1.67em 0
 }
 
 h6 {
-	font-size: .67em;
+	font-size: 1em;
 	margin: 2.33em 0
 }
 
@@ -182,51 +182,7 @@ figure {
 
 body {
 	margin: 20px;
-}
-
-input,textarea {
-	padding: 9px;
-	border: solid 1px #E5E5E5;
-	outline: 0;
-	font: normal 13px/100% Verdana, Tahoma, sans-serif;
-	width: 200px;
-	background: #FFFFFF;
-	background: -webkit-gradient(linear, left top, left 25, from(#FFFFFF),
-		color-stop(4%, #EEEEEE), to(#FFFFFF));
-	background: -moz-linear-gradient(top, #FFFFFF, #EEEEEE 1px, #FFFFFF 25px);
-	box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
-	-moz-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
-	-webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
-}
-
-textarea {
-	width: 400px;
-	max-width: 400px;
-	height: 150px;
-	line-height: 150%;
-}
-
-input:hover,textarea:hover,input:focus,textarea:focus {
-	border-color: #C9C9C9;
-	-webkit-box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 8px;
-}
-
-label {
-	margin-left: 10px;
-	color: #999999;
-}
-
-.submit input {
-	width: auto;
-	padding: 11px 26px;
-	background: #1B75BB;
-	border: 0;
-	font-size: 14px;
-	color: #FFFFFF;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	text-decoration: none;
-	font-family: sans-serif
+	font-size: 12px;
 }
 
 a.button {
@@ -234,12 +190,12 @@ a.button {
 	padding: 10px 26px;
 	background: #1B75BB;
 	border: 0;
-	font-size: 14px;
+	font-size: 12px;
 	color: #FFFFFF;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	text-decoration: none;
-	font-family: sans-serif
+	font-family: Lucida Grande,Lucida Sans,Arial,sans-serif;
 }
 
 a.buttonred {
@@ -247,12 +203,12 @@ a.buttonred {
 	padding: 10px 26px;
 	background: #EB5359;
 	border: 0;
-	font-size: 14px;
+	font-size: 12px;
 	color: #FFFFFF;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	text-decoration: none;
-	font-family: sans-serif
+	font-family: Lucida Grande,Lucida Sans,Arial,sans-serif;
 }
 
 a.buttongreen {
@@ -260,10 +216,38 @@ a.buttongreen {
 	padding: 10px 26px;
 	background: #2AB573;
 	border: 0;
-	font-size: 14px;
+	font-size: 12px;
 	color: #FFFFFF;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	text-decoration: none;
-	font-family: sans-serif
+	font-family: Lucida Grande,Lucida Sans,Arial,sans-serif;
+}
+
+table.dataTable tr.even, table.dataTable tr.even td.sorting_1, table.dataTable tr.even td.sorting_2, table.dataTable tr.even td.sorting_3 {
+	background: #FFFFFF;
+}
+
+table.dataTable tr.odd, table.dataTable tr.odd td.sorting_1, table.dataTable tr.odd td.sorting_2, table.dataTable tr.odd td.sorting_3 {
+	background: #FAFAFA;
+}
+
+table.dataTable tr.even:hover, table.dataTable tr.even:hover td.sorting_1, table.dataTable tr.even:hover td.sorting_2, table.dataTable tr.even:hover td.sorting_3 {
+	background: #FAFAD2;
+}
+
+table.dataTable tr.odd:hover, table.dataTable tr.odd:hover td.sorting_1, table.dataTable tr.odd:hover td.sorting_2, table.dataTable tr.odd:hover td.sorting_3 {
+	background: #FAFAD2;
+}
+
+th {
+	font-size: 12px;
+}
+
+td {
+	font-size: 12px;
+}
+
+strong {
+	color: #1B75BB;
 }
