Clean up forms & support manual attendee addition

--- a/qr-conf-jee-backend/WebRoot/css/genuitec-forms.css
+++ b/qr-conf-jee-backend/WebRoot/css/genuitec-forms.css
@@ -35,7 +35,7 @@ label {
 	width: auto;
 	padding: 12px 26px;
 	padding-top: 11px;
-	background: #1B75BB;
+	background: #2AB573;
 	border: 0;
 	font-size: 12px;
 	color: #FFFFFF;
