--- a/qr-conf-jee-backend/WebRoot/css/genuitec-styles.css
+++ b/qr-conf-jee-backend/WebRoot/css/genuitec-styles.css
@@ -44,27 +44,27 @@ a:active,a:hover {
 
 h1 {
 	color: #231F20;
-	font-size: 2em;
+	font-size: 1.6em;
 	font-weight: normal;
 	margin: .67em 0
 }
 
 h2 {
 	color: #58585B;
-	font-size: 1.6em;
+	font-size: 1.35em;
 	font-weight: normal;
 	margin: .83em 0
 }
 
 h3 {
-	font-size: 1.3em;
+	font-size: 1.2em;
 	font-weight: normal;
 	margin: 1em 0
 }
 
 h4 {
 	color: #58585B;
-	font-size: 1.3em;
+	font-size: 1.1em;
 	font-weight: normal;
 	margin: 1.33em 0
 }
@@ -75,8 +75,10 @@ h5 {
 }
 
 h6 {
+	color: #1B75BB;
 	font-size: 1em;
-	margin: 2.33em 0
+	font-weight: normal;
+	margin: 1em 0
 }
 
 abbr[title] {
@@ -250,4 +252,11 @@ td {
 
 strong {
 	color: #1B75BB;
+}
+
+.dataTables_wrapper .ui-toolbar {
+	padding-top: 1px;
+	padding-right: 2px;
+	padding-left: 10px;
+	padding-bottom: 3px;
 }
