--- a/qr-conf-jee-backend/WebRoot/css/genuitec-forms.css
+++ b/qr-conf-jee-backend/WebRoot/css/genuitec-forms.css
@@ -1,3 +1,14 @@
+/*******************************************************************************
+ *  Copyright (c) 2014 Genuitec, LLC.
+ *  All rights reserved. This program and the accompanying materials
+ *  are made available under the terms of the Eclipse Public License v1.0
+ *  which accompanies this distribution, and is available at
+ *  http://www.eclipse.org/legal/epl-v10.html
+ * 
+ *  Contributors:
+ *     Genuitec, LLC - initial API and implementation using MyEclipse
+ *******************************************************************************/
+
 input,textarea {
 	font-size: 12px;
 	padding: 6px;
