--- a/www/assets/css/app.css
+++ b/www/assets/css/app.css
@@ -219,7 +219,7 @@ a {
     display: inline-block;
     margin-right: 15px;
     margin-bottom: 10px;
-    padding: 10px;
+    /*padding: 10px;*/
     /*background: rgb(44, 183, 248);*/
     /*color: white;*/
     background: white;
